updated usage of runtime